# WebRTC-Voice-Activity-Detection

./: README.md
VoiceActivityDetection/: CMakeLists.txt
VoiceActivityDetection/common_audio/vad/: webrtc_vad.c
VoiceActivityDetection/common_audio/vad/include/: webrtc_vad.h
